--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.10"
   }
 }
