--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Heritier Mwalila",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
@@ -18,6 +19,8 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
